Delete gVolumeList on shutdown.  b=397305  r+sr+a1.9=bzbarsky